; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_fcs_rport.c_bfa_fcs_rport_plogi_create.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_fcs_rport.c_bfa_fcs_rport_plogi_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfa_fcs_lport_s = type { i32 }
%struct.fchs_s = type { i32, i32 }
%struct.fc_logi_s = type { i32 }
%struct.bfa_fcs_rport_s = type { %struct.TYPE_2__, i32, i32 }
%struct.TYPE_2__ = type { i32 }

@RPSM_EVENT_PLOGI_RCVD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bfa_fcs_rport_plogi_create(%struct.bfa_fcs_lport_s* %0, %struct.fchs_s* %1, %struct.fc_logi_s* %2) #0 {
  %4 = alloca %struct.bfa_fcs_lport_s*, align 8
  %5 = alloca %struct.fchs_s*, align 8
  %6 = alloca %struct.fc_logi_s*, align 8
  %7 = alloca %struct.bfa_fcs_rport_s*, align 8
  store %struct.bfa_fcs_lport_s* %0, %struct.bfa_fcs_lport_s** %4, align 8
  store %struct.fchs_s* %1, %struct.fchs_s** %5, align 8
  store %struct.fc_logi_s* %2, %struct.fc_logi_s** %6, align 8
  %8 = load %struct.bfa_fcs_lport_s*, %struct.bfa_fcs_lport_s** %4, align 8
  %9 = load %struct.fc_logi_s*, %struct.fc_logi_s** %6, align 8
  %10 = getelementptr inbounds %struct.fc_logi_s, %struct.fc_logi_s* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.fchs_s*, %struct.fchs_s** %5, align 8
  %13 = getelementptr inbounds %struct.fchs_s, %struct.fchs_s* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call %struct.bfa_fcs_rport_s* @bfa_fcs_rport_alloc(%struct.bfa_fcs_lport_s* %8, i32 %11, i32 %14)
  store %struct.bfa_fcs_rport_s* %15, %struct.bfa_fcs_rport_s** %7, align 8
  %16 = load %struct.bfa_fcs_rport_s*, %struct.bfa_fcs_rport_s** %7, align 8
  %17 = icmp ne %struct.bfa_fcs_rport_s* %16, null
  br i1 %17, label %19, label %18

18:                                               ; preds = %3
  br label %43

19:                                               ; preds = %3
  %20 = load %struct.bfa_fcs_rport_s*, %struct.bfa_fcs_rport_s** %7, align 8
  %21 = load %struct.fc_logi_s*, %struct.fc_logi_s** %6, align 8
  %22 = call i32 @bfa_fcs_rport_update(%struct.bfa_fcs_rport_s* %20, %struct.fc_logi_s* %21)
  %23 = load %struct.fchs_s*, %struct.fchs_s** %5, align 8
  %24 = getelementptr inbounds %struct.fchs_s, %struct.fchs_s* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.bfa_fcs_rport_s*, %struct.bfa_fcs_rport_s** %7, align 8
  %27 = getelementptr inbounds %struct.bfa_fcs_rport_s, %struct.bfa_fcs_rport_s* %26, i32 0, i32 1
  store i32 %25, i32* %27, align 4
  %28 = load %struct.bfa_fcs_rport_s*, %struct.bfa_fcs_rport_s** %7, align 8
  %29 = getelementptr inbounds %struct.bfa_fcs_rport_s, %struct.bfa_fcs_rport_s* %28, i32 0, i32 2
  %30 = load i32, i32* %29, align 4
  %31 = load %struct.bfa_fcs_rport_s*, %struct.bfa_fcs_rport_s** %7, align 8
  %32 = getelementptr inbounds %struct.bfa_fcs_rport_s, %struct.bfa_fcs_rport_s* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @bfa_trc(i32 %30, i32 %33)
  %35 = load %struct.bfa_fcs_rport_s*, %struct.bfa_fcs_rport_s** %7, align 8
  %36 = getelementptr inbounds %struct.bfa_fcs_rport_s, %struct.bfa_fcs_rport_s* %35, i32 0, i32 0
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = add nsw i32 %38, 1
  store i32 %39, i32* %37, align 4
  %40 = load %struct.bfa_fcs_rport_s*, %struct.bfa_fcs_rport_s** %7, align 8
  %41 = load i32, i32* @RPSM_EVENT_PLOGI_RCVD, align 4
  %42 = call i32 @bfa_sm_send_event(%struct.bfa_fcs_rport_s* %40, i32 %41)
  br label %43

43:                                               ; preds = %19, %18
  ret void
}

declare dso_local %struct.bfa_fcs_rport_s* @bfa_fcs_rport_alloc(%struct.bfa_fcs_lport_s*, i32, i32) #1

declare dso_local i32 @bfa_fcs_rport_update(%struct.bfa_fcs_rport_s*, %struct.fc_logi_s*) #1

declare dso_local i32 @bfa_trc(i32, i32) #1

declare dso_local i32 @bfa_sm_send_event(%struct.bfa_fcs_rport_s*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
